--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -1,20 +1,12 @@
 services:
     volleyball.listener.utility:
-        class: Volleyball\UtilityBundle\Listener\UtilityListener
+        class: Volleyball\Bundle\UtilityBundle\Listener\UtilityListener
         tags:
             - { name: kernel.event_listener, event: kernel.request, method: onKernelRequest }
         arguments: [ @service_container ]
     
-    volleyball.repository.factory:
-        class: Doctrine\Common\Persistence\ObjectRepository
-        factory_service: doctrine
-        factory_method: getRepository
-        arguments:
-            - []
-            - '@service_container'
-    
     volleyball.menu.builder:
-        class: Volleyball\UtilityBundle\Menu\MenuBuilder
+        class: Volleyball\Bundle\UtilityBundle\Menu\MenuBuilder
         arguments: ["@knp_menu.factory", "@security.context", "@translator"]
 
     volleyball.menu.main:
@@ -36,7 +28,7 @@ services:
             - { name: knp_menu.menu, alias: nonauth }
             
     volleyball.menu.voter.request:
-        class: Volleyball\UtilityBundle\Menu\RequestVoter
+        class: Volleyball\Bundle\UtilityBundle\Menu\RequestVoter
         arguments: [ "@service_container" ]
         tags:
             - { name: knp_menu.voter }
